java-design-patterns-03/src/main/java/com/farhad/example/refactoring/consolidate_conditional_expression/bad/PaymentStatus.java
package com.farhad.example.refactoring.consolidate_conditional_expression.bad;

public enum PaymentStatus {

	PAID, PENDDING
}
